fixed z-index for header theme toggle to be clickable

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 
 header {
     position: relative;
-    z-index: 2;
+    z-index: 3;
     padding: 1rem 1.5rem;
     display: flex;
     justify-content: space-between;
